# tailor

./: CMakeLists.txt  pattern.h  tailor-config.cmake.in
include/tailor/: tailor.h  tailor_arc_or_segment.h  tailor_point.h
include/tailor/detail/: tailor_detail.h
test/: CMakeLists.txt  test_basic.cpp  test_common.h
